--- a/package.json
+++ b/package.json
@@ -3,29 +3,37 @@
 	"version": "1.1.0",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
-		"name": "Tharindu N. Madhusanka",
-		"email": "mail@tharindu.dev",
-		"url": "https://tharindu.dev"
+		"name": "Asif Rahman",
+		"email": "asif.rahm4n@gmail.com",
+		"url": "https://asifrahman.xyz"
 	},
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.4.0",
-		"@fortawesome/free-brands-svg-icons": "^6.4.0",
-		"@fortawesome/free-regular-svg-icons": "^6.4.0",
-		"@fortawesome/free-solid-svg-icons": "^6.4.0",
-		"@fortawesome/react-fontawesome": "^0.2.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"@fortawesome/fontawesome-svg-core": "^6.6.0",
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-regular-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@svgr/plugin-svgo": "^8.1.0",
+		"@svgr/webpack": "^8.1.0",
+		"@testing-library/jest-dom": "^6.4.8",
+		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@vercel/analytics": "^1.3.1",
+		"css-select": "^5.1.0",
+		"nth-check": "^2.1.1",
+		"postcss": "^8.4.40",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-ga4": "^2.1.0",
 		"react-helmet": "^6.1.0",
-		"react-router-dom": "^6.11.1",
-		"react-scripts": "5.0.1",
-		"styled-components": "^5.3.10",
-		"web-vitals": "^2.1.4"
+		"react-router-dom": "^6.25.1",
+		"react-scripts": "^5.0.1",
+		"resolve-url-loader": "^5.0.0",
+		"styled-components": "^6.1.12",
+		"svgo": "^3.3.2",
+		"web-vitals": "^4.2.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
